# pyhole-updatelists

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: pylint.yaml  pypi-test-publish.yaml
pyhole_updatelists/: __init__.py  __main__.py  const.py  http_actions.py  pihole_api.py  pyhole_updatelists.py  settings.py  utils.py
