[build-system]
requires = ["setuptools==77.0.3", "setuptools-scm >= 8"]
build-backend = "setuptools.build_meta"

[project]
name = "pyhole_updatelists"
#version = "0.0.1"
dynamic = ["version"]
description = "Update Pi-Hole Lists via the API"
keywords = ["pihole", "dns", "automation", "blocklist" ]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3", 
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
authors = [
    { name = "Barry Quiel", email = "barry.quiel@gmail.com"},
]

maintainers = [
    { name = "Barry Quiel", email = "barry.quiel@gmail.com"},
]

readme = "README.md"
license = "GPL-3.0-or-later"

requires-python = ">= 3.12.0"

dependencies = [
"python-dotenv",
"requests",
"validators",
]

[project.urls]
HomePage = "https://www.github.com/quielb/pyhole-updatelists"
Documentation = "https://www.github.com/quielb/pyhole-updatelists"
Repository = "https://www.github.com/quielb/pyhole-updatelists.git"
"Bug Tracker" = "https://www.github.com/quielb/pyhole-updatelists/issues"

[project.scripts]
pyhole-updatelists = "pyhole_updatelists.__main__:main"

[tool.setuptools.packages.find]
include = ["pyhole_updatelists"]

[tool.pylint.messages_control]
disable = [
    "arguments-differ",
    "attribute-defined-outside-init",
    "blacklisted-name",
    "duplicate-code",
    "fixme",
    "import-error",
    "no-member",
    "no-name-in-module",
    "protected-access",
    "stop-iteration-return",
    "too-few-public-methods",
    "too-many-arguments",
    "too-many-branches",
    "too-many-instance-attributes",
    "too-many-lines",
    "too-many-locals",
    "too-many-return-statements",
    "too-many-statements",
    "abstract-method",
    "chained-comparison",
    "eval-used",
    "exec-used",
    "expression-not-assigned",
    "global-statement",
    "missing-docstring",
    "redefined-argument-from-local",
    "redefined-outer-name",
    "reimported",
    "too-many-ancestors",
    "unexpected-special-method-signature",
]
